# preeny

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cmake-build-multiarch.sh  cmake-build.sh
src/: Makefile  build_so.sh  crazyrealloc.c  dealarm.c  decookie.c  deexec.c  defork.c  deptrace.c  derand.c  desigact.c  desleep.c  desock.c  desock_dup.c  desrand.c  detime.c  deuid.c  ensock.c  eofkiller.c  getcanary.c  logging.c  logging.h  mallocwatch.c  nowrite.c  patch.c  setcanary.c  setstdin.c  startstop.c  writeout.c
test/: .gitignore  Makefile  nowrite.c  realloc.c  run_tests.sh  setstdin_fread.c  setstdin_getc.c  setstdin_read.c  sleep.c  time.c  uid.c
tests/: .gitignore  Makefile  hello.c  rand.c  realloc.c  sock.c  uid.c
